# m1-ros2

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_AGX_ORIN.md  README.md  _accuracy_bench.py  _diag_contact.py  _drake_mesh_collision_probe.py  _e2e_check.py  _gravity_drake.py  _gravity_torque.py  _osc_test.py  _probe_cmd_vs_meas.py  _quest_mesh_orientation_test.py  _quest_orientation_test.py  _quest_perf_bench.py  _quest_position_test.py  _reproduce_failures.py  _ros_reach_check.py  _solver_bench.py  _solver_failure_logger.py  _solver_improvement_research.md  _solver_test.py  _solver_test_pathing.py  _solver_test_positions.py  _solver_test_tracking.py  _swerve_test.py  _teleop_stress.py
.claude/agents/: kinematics-reviewer.md  solver-suite-runner.md
.claude/skills/colcon-build/: SKILL.md
.claude/skills/run-solver-suite/: SKILL.md
assets/openarm_description/: CMakeLists.txt  package.xml
assets/ranger_air_description/: CMakeLists.txt  package.xml
assets/ranger_air_description/meshes/: linear_act_move.stl
assets/ranger_air_description/urdf/: ranger_air_description.urdf
deploy/agx-orin/: Dockerfile  README.md  can_up.sh  setup_agx_orin.sh
deploy/agx-orin/systemd/: 60-ros2-dds.conf  can0.service  jetson-clocks.service  m1-bringup.service  m1.env
docs/: bughunt-2026-06-30.md  quest-latency-optimizations-2026-07-01.md
docs/superpowers/plans/: 2026-06-23-real-hardware-deployment.md
docs/superpowers/specs/: 2026-06-23-quest-viz-perf-design.md  2026-06-23-real-hardware-deployment-design.md
isaac/: README.md  convert_urdf_to_usd.py  ros_sim.py  run_sim.py  teleop.py
ros2_ws/: AGILEX_SETUP.md  HARDWARE.md  README.md
ros2_ws/src/: openarm_description  ranger_air_description
ros2_ws/src/m1_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/m1_bringup/config/: m1_controllers.yaml  m1_joint_limits.yaml
ros2_ws/src/m1_bringup/launch/: bringup.launch.py  hardware.launch.py  m1_moveit.launch.py
ros2_ws/src/m1_bringup/moveit/: joint_limits.yaml  kinematics.yaml  m1.srdf  moveit_controllers.yaml  ompl_planning.yaml
ros2_ws/src/m1_bringup/rviz/: m1.rviz
ros2_ws/src/m1_bringup/urdf/: m1.ros2_control.xacro  m1_hardware.urdf.xacro
ros2_ws/src/m1_can_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/m1_can_tools/config/: motor_map.demo.yaml  motor_map.example.yaml
ros2_ws/src/m1_can_tools/m1_can_tools/: __init__.py  dm_protocol.py  hwconfig_node.py  motor_bus.py  transport.py
ros2_ws/src/m1_can_tools/m1_can_tools/web/: hwconfig.html
ros2_ws/src/m1_can_tools/test/: manual_hwconfig_e2e.py  test_dm_protocol.py  test_hwconfig_datapath.py  test_motor_bus.py  test_transport.py
ros2_ws/src/m1_control/: _bridge_test.py  package.xml  setup.cfg  setup.py
ros2_ws/src/m1_control/config/: m1_control.yaml
ros2_ws/src/m1_control/m1_control/: base_bridge.py  collision.py  controller_node.py  joint_command_bridge.py  kinematics.py  quest_node.py  ranger_state_shim.py  send_pose.py  swerve.py  teleop_node.py  trajectory.py  web_node.py
ros2_ws/src/m1_control/m1_control/web_assets/: manifest.json
ros2_ws/src/m1_control/m1_control/web_assets/meshes/: 0a1aae2dd8.glb  116dc20fcb.glb  1ec7ab88b4.glb  20297bff60.glb  221b87946c.glb  316df2e68d.glb  359e389e7e.glb  365fd9fefa.glb  3dd77c62aa.glb  3fba1bc6a0.glb  41dd34a6a4.glb  4e6ecf1819.glb  514d760237.glb  54ae45e73e.glb  7231cfe347.glb  7232b420cd.glb  76ce0cda02.glb  78f85391ba.glb  84b0277ccd.glb  88bb767263.glb  9829cd6fad.glb  9cdf2151c9.glb  a4964de0ed.glb  b65fd926d3.glb  b6a19a0437.glb  c9ca6b262f.glb  caa8ee3386.glb  d498603198.glb  d910ac203c.glb  dcb4ea42c6.glb  df568cb0e1.glb  e6dfb5f91b.glb  ed2e33bab8.glb  efc3b77208.glb
ros2_ws/src/m1_control/web/: index.html
ros2_ws/src/m1_hardware/: CMakeLists.txt  m1_hardware.xml  package.xml
ros2_ws/src/m1_hardware/config/: control_gains.yaml
ros2_ws/src/m1_hardware/include/m1_hardware/: m1_system_interface.hpp
ros2_ws/src/m1_hardware/src/: m1_system_interface.cpp
ros2_ws/src/m1_hardware/test/: test_device_matching.cpp  test_dm_mit_packing.cpp
tools/: convert_collision_meshes.py  convert_meshes.py
