<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m1_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and RViz config to bring up the M1 ROS 2 control stack.</description>
  <maintainer email="jerry@example.com">jerry</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>m1_control</exec_depend>
  <exec_depend>ranger_air_description</exec_depend>
  <!-- AgileX Ranger-Air base driver, launched by hardware.launch.py (use_base). -->
  <exec_depend>agx_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
